Quiz bug finally squashed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,17 +182,9 @@ li::marker {
   color: #fff;
 }
 
-/* .dark * {
-  color: #fff;
-} */
-
 .dark button {
   color: #fff;
 }
-
-/* .dark aside {
-  border: 2px solid var(--light-box-shadow);
-} */
 
 .serif * {
   font-family: var(--LoraReg) !important;
@@ -240,7 +232,7 @@ li::marker {
   margin: 0 auto;
   width: 100%;
   height: 95%;
-  /* z-index: 55; */
+  z-index: 55;
   /* border: 2px solid red; */
   backdrop-filter: blur(5px);
 }
